test/policy/bad-rule.yaml
apiVersion: json.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  name: test
spec:
  rules:
    - name: pod-no-latest
      # matches instead of match
      matches:
        any:
        - apiVersion: v1
          kind: Pod
      assert:
        all:
        - check:
            spec:
              ~foo.containers->foos:
                (at($foos, $foo).image)->foo:
                  # an image tag is required
                  (contains($foo, ':')): true
                  # using a mutable image tag e.g. 'latest' is not allowed
                  (ends_with($foo, ':latest')): false
